trying to fix table alignment

--- a/src/pages/App/App.css
+++ b/src/pages/App/App.css
@@ -63,8 +63,8 @@
 .lists > .wishCard {
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  border-radius: 7px;
   border: solid orange;
+  border-radius: 7px;
   height: 400px;
   max-width: 300px;
   background-color: white;
@@ -106,14 +106,22 @@ img {
   flex-direction: column;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
-  border-radius: 7px;
   border: solid orange;
+  border-radius: 7px;
   max-height: 5000px;
   max-width: 600px;
   background-color: white;
   padding: 20px;
   align-items: center;
   overflow-x: scroll;
+}
+
+.tableHeader >thead > tr > th {
+  display: flexbox;
+  justify-content: space-between;
+  border: solid black;
+  border-radius: 7px;
+  padding: 2px;
 }
 
 .newExpense {
